<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    android:background="@color/white">

    <TextView
        android:id="@+id/numberOfPagesLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_4"
        android:fontFamily="@font/iciel_cadena"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="textEnd"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/splash_profile"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/splash_gender"
        android:src="@drawable/img_splash_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_your_gender"
        android:fontFamily="@font/iciel_cadena"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_profile"/>

    <LinearLayout
        android:id="@+id/layout_gender"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome">

        <Button
            android:id="@+id/maleSelectionButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_main_default"
            android:fontFamily="@font/iciel_cadena"
            android:text="@string/male"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/femaleSelectionButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_alt"
            android:fontFamily="@font/iciel_cadena"
            android:text="@string/female"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/genderContinueButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_main"
        android:fontFamily="@font/iciel_cadena"
        android:text="@string/next"
        android:textColor="@drawable/fnt_col_main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        android:layout_marginBottom="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
