<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    android:background="@color/white">

    <ImageView
        android:id="@+id/splash_welcome"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/splash_welcome"
        android:src="@drawable/img_splash_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_welcome" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_pineapple"
        android:fontFamily="@font/iciel_cadena"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_place_where"
        android:fontFamily="@font/bubbler_one"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryGrey"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_main"
        android:fontFamily="@font/iciel_cadena"
        android:text="@string/get_started"
        android:textColor="@drawable/fnt_col_main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_alt"
        android:fontFamily="@font/bubbler_one"
        android:text="@string/already_have_an_account_login"
        android:textAllCaps="false"
        android:textColor="@drawable/fnt_col_alt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTintMode="multiply"
        android:layout_marginBottom="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

