<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    android:background="@color/white">

    <!--     btn_login
             link_signup
             input_password
             input_email -->

    <ImageView
        android:id="@+id/splash_welcome"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/splash_welcome"
        android:src="@drawable/img_splash_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_welcome" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:fontFamily="@font/iciel_cadena"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_main"
        android:fontFamily="@font/iciel_cadena"
        android:text="@string/login"
        android:textColor="@drawable/fnt_col_main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/link_signup"/>

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bubbler_one"
        android:text="@string/have_no_account"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/custom_entry"
        android:drawableStart="@drawable/ic_email"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:drawablePadding="12dp"
        android:autofillHints="Email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/bubbler_one"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/custom_entry"
        android:drawableStart="@drawable/ic_password"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:drawablePadding="12dp"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:fontFamily="@font/bubbler_one"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email"/>

</androidx.constraintlayout.widget.ConstraintLayout>
