<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    android:background="@color/white">

        <TextView
            android:id="@+id/numberOfPagesLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_4"
            android:fontFamily="@font/iciel_cadena"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textEnd"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/splash_profile"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/splash_profile"
            android:src="@drawable/img_splash_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_your_profile"
            android:fontFamily="@font/iciel_cadena"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splash_profile"/>

        <LinearLayout
            android:id="@+id/layout_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_welcome">
                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:background="@drawable/custom_entry"
                    android:drawableStart="@drawable/ic_email"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="12dp"
                    android:drawablePadding="12dp"
                    android:autofillHints="Email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/bubbler_one"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:background="@drawable/custom_entry"
                    android:drawableStart="@drawable/ic_username"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="12dp"
                    android:drawablePadding="12dp"
                    android:autofillHints="Username"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:fontFamily="@font/bubbler_one"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:background="@drawable/custom_entry"
                    android:drawableStart="@drawable/ic_password"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="12dp"
                    android:drawablePadding="12dp"
                    android:autofillHints="Password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/bubbler_one"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_main"
            android:fontFamily="@font/iciel_cadena"
            android:text="@string/next"
            android:textColor="@drawable/fnt_col_main"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:backgroundTintMode="multiply"
            android:layout_marginBottom="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
