<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    android:background="@color/white">

    <TextView
        android:id="@+id/numberOfPagesLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_4"
        android:fontFamily="@font/iciel_cadena"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="textEnd"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/splash_profile"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/splash_date"
        android:src="@drawable/img_splash_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/getStartedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when_birthday"
        android:fontFamily="@font/iciel_cadena"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_profile"/>

    <DatePicker
        android:id="@+id/ageSelectionPicker"
        style="@style/MyDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#ff4081"
        android:calendarTextColor="#ff4081"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:yearListSelectorColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/getStartedTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/ageContinueButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_main"
        android:fontFamily="@font/iciel_cadena"
        android:text="@string/next"
        android:textColor="@drawable/fnt_col_main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        android:layout_marginBottom="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
