<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ZellyCookies.PineApple.Main.ProfileCheckinMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- contain back activity -->
        <include layout="@layout/layout_top_navigation_back"/>

        <com.ZellyCookies.PineApple.Utils.SquareImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="Click to change profile photo"/>

        <TextView
            android:id="@+id/name_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rose_j"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/iciel_cadena"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/dob_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/august_5th_2001_male"
            android:fontFamily="@font/bubbler_one"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryGrey"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/distance_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="5 miles away"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryGrey"
            android:text="@string/about"
            android:fontFamily="@font/bubbler_one"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/bio_beforematch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/something_about_victoria"
            android:fontFamily="@font/bubbler_one"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryGrey"
            android:text="@string/interests"
            android:fontFamily="@font/bubbler_one"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/interests_beforematch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dancing, Traveling, Love"
            android:fontFamily="@font/bubbler_one"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"/>

    </LinearLayout>
</ScrollView>
