<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_profile_image"
            android:layout_width="151dp"
            android:layout_height="161dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/circle_profile_image"
            android:layout_centerHorizontal="true"
            android:text="@string/rose_j"
            android:fontFamily="@font/iciel_cadena"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_name"
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:text="@string/august_5th_2001_male"
            android:fontFamily="@font/bubbler_one"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryGrey"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/settings"
            android:layout_marginEnd="90dp"
            android:background="@drawable/circle_background_orange"
            android:gravity="center"
            android:onClick="Edit_Profile"
            android:padding="15dp"
            android:src="@drawable/ic_new_edit"
            tools:ignore="NotSibling"
            android:contentDescription="@string/dummy" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/profile_dob"
            android:layout_marginTop="52dp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="140dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/circle_background_orange"
            android:gravity="center"
            android:padding="15dp"
            android:src="@drawable/ic_new_settings"
            android:contentDescription="@string/dummy"/>

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="41dp"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@id/profile_dob"
            android:layout_marginTop="64dp"
            android:background="@color/colorPrimaryGrey"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <include layout="@layout/layout_top_navigation_view"/>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>